[package]
name = "rust-cryptopals"
version = "0.1.0"
authors = ["Steven Black <steveb@stevenblack.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
base64="0.12.0"
regex = "1"
indoc = "0.3"
itertools = "0.7.8"
hamming = "0.1"

